tests/requests/snapshots/can_auth_with_magic_link@auth_request.snap
---
source: tests/requests/auth.rs
expression: magic_link_response.text()
---
"{\"is_verified\":false,\"name\":\"user1\",\"pid\":\"PID\",\"token\":\"TOKEN\"}"
