tests/requests/snapshots/can_get_current_user@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"email\":\"test@loco.com\",\"name\":\"loco\",\"pid\":\"PID\"}",
)
