tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"is_verified\":false,\"name\":\"loco\",\"pid\":\"PID\",\"token\":\"TOKEN\"}"
