tests/requests/snapshots/can_register@auth_request.snap
---
source: tests/requests/auth.rs
expression: saved_user
---
Ok(
    Model {
        api_key: "lo-PID",
        created_at: DATE,
        email: "test@loco.com",
        email_verification_sent_at: Some(
            DATE,
        ),
        email_verification_token: Some(
            "PID",
        ),
        email_verified_at: None,
        id: ID
        magic_link_expiration: None,
        magic_link_token: None,
        name: "loco",
        password: "PASSWORD",
        pid: PID,
        reset_sent_at: None,
        reset_token: None,
        updated_at: DATE,
    },
)
