tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"is_verified\":true,\"name\":\"loco\",\"pid\":\"PID\",\"token\":\"TOKEN\"}",
)
